# conan_cmake

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  main.cpp  test.cpp
conf/: config.yaml  test.conf
include/: AbstractShape.h  AutoDiff.h  Car.h  ListNode.h  Triangle.h  threadpool.h
proto/: CMakeLists.txt  gen_cpp_pb.sh  people.proto  test.proto
proto_sh/: game.pb.cc  game.pb.h  game.proto
src/: AbstractShape.cpp  AutoDiff.cpp  Car.cpp  Triangle.cpp
test_src/: faiss_usage.cpp  multi_thread.cpp  pb_config.cpp  pb_json.cpp  reader.cpp  smart_ptr.cpp  test.cpp  writter.cpp  yaml_test.cpp
